# minor-illusion

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  404.html  README.md  docker-compose.yaml  index.html  sitemap.xml
.github/: pull_request_template.md
.github/workflows/: backend-tests.yaml  main.yaml  publish-docs.yaml
backend/: .dockerignore  Dockerfile  index.html
backend/src/: alembic.ini  cast.sh  pyproject.toml  requirements.txt  setup.cfg  tox.ini  wait_for_db.py
backend/src/app/: auth.py  create_seed_data.py  crud.py  db.py  debug.py  log_utils.py  main.py  models.py  rtu.py  schemas.py  settings.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: 0.1.0_create_user_todo_table.py  0.1.1_user_todo_seed_data.py  0.2.0_adding_space_and_org.py  0.2.1_org_space_user_todo_seed_data.py  128a654019d2_initial.py  5c5ebec0c9fb_sample_data_population.py
backend/src/scripts/: run-test-services.sh
backend/src/tests/: conftest.py  fake_models.py  test_auth.py  test_crud.py
backend/src/tests/demo_db/: conftest.py  test_auth.py  test_crud.py  test_rtu.py
backend/src/tests/fake_daos/: conftest.py  fake_models.py  test_auth.py  test_crud.py
backend/src/tests/live_db_tests/: README.md  conftest.py  test_auth.py  test_crud.py
docs/: Dockerfile  mkdocs.yml
docs/docs/: backend.md  index.md  traefik.md
docs/mkdocs/docs/: backend.md  index.md
frontend/: Dockerfile
frontend/minor-illusion/: .gitignore  package.json
jupyter/: Dockerfile  conda_requirements.txt  pypi_requirements.txt  pyproject.toml  requirements.txt
jupyter/config/.jupyter/: jupyter_nbconvert_config.json  jupyter_notebook_config.json
jupyter/config/.jupyter/nbconfig/: common.json  notebook.json
jupyter/notebooks/: 01. Interact with Database directly.ipynb  01. Query Database for Users and Todos.ipynb  02. Interacting with backend.ipynb  02. Interacting with test app.ipynb  03. Stress test API.ipynb
opensearch/: data-prepper-pipeline.yaml  otel-collector-config.yaml
proxy/: traefik.yaml
proxy/dynamic/: backend.yaml  dashboard.yaml  frontend.yaml
search/: search_index.json
traefik/: index.html
