[tool.poetry]
name = "jupyter"
version = "0.1.0"
description = ""
authors = ["Matt Kafonek <kafonek@noteable.io>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.9"
asyncpg = "^0.25.0"
httpx = "^0.22.0"
ipython = "^8.0.1"
ipywidgets = "^7.6.5"
isort = "^5.10.1"
jupyter-contrib-nbextensions = "^0.5.1"
jupyterlab = "^3.2.9"
nb-black = "^1.0.7"
notebook = "^6.4.8"
pandas = "^1.4.0"
psycopg2-binary = "^2.9.3"
pydantic = "^1.9.0"
retrolab = "^0.3.19"
rich = "^11.1.0"
SQLAlchemy = "^1.4.31"
sqlalchemy-cockroachdb = "^1.4.3"
structlog = "^21.5.0"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
