[tool.poetry]
name = "minor-illusion"
version = "0.1.0"
description = ""
authors = ["Matt Kafonek <kafonek@noteable.io>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.7.5"
asyncpg = "^0.26.0"
debugpy = "^1.5.1"
fastapi = "^0.70.0"
psycopg2-binary = "^2.9.2"
pydantic = "^1.8.2"
python-multipart = "^0.0.5"
SQLAlchemy = "^1.4.40"
sqlalchemy-cockroachdb = "^1.4.3"
structlog = "^21.4.0"
uvicorn = "^0.15.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
# As of Aug 2022, need to use 1.12 pre-release for main opentelemetry libs
# see https://github.com/open-telemetry/opentelemetry-python-contrib/issues/1182
opentelemetry-distro = "^0.33b0"
opentelemetry-sdk = "^1.12.0"
opentelemetry-api = "^1.12.0"
opentelemetry-exporter-otlp-proto-grpc = "^1.12.0"
opensearch-logger = "^1.2.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"
pytest-mock = "^3.6.1"
requests = "^2.26.0"
black = "^21.11b1"
isort = "^5.10.1"
mypy = "^0.910"
mirakuru = "^2.4.1"
httpx = "^0.21.1"
mkdocs = "^1.2.3"
Faker = "^11.3.0"
filelock = "^3.4.2"
pytest-xdist = "^2.5.0"
# Needed for pytest-xdist vs sqlalchemy
greenlet = "^1.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
